# am-corp

./: .cursorrules  .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  OPUS_REVIEW.md  docker-compose.yml  pyproject.toml  requirements.txt
config/personalities/: ivy_intel.yaml  randy_recon.yaml  rita_report.yaml  victor_vuln.yaml
docs/: AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  DEPLOYMENT.md  ENV_TEMPLATE.md  SECURITY.md  SETUP.md  am-corp_PRD.md
docs/adr/: 001-use-crewai-for-orchestration.md  002-natural-language-agent-interaction.md  003-agent-transparency-and-smart-scanning.md  README.md
docs/phases/: phase-1-infrastructure.md  phase-2-vuln-intel-agents.md  phase-3-report-agent.md  phase-4-testing-docs.md  phase-5-autonomous-agents.md
logs/: .gitkeep
scripts/: entrypoint.sh  restart.sh  team_intro.py  test_casual_chat.py  test_evolution.py  test_gemini.py  test_news_feeds.py  test_personality.py  test_randy.py  test_thoughts.py  update_nuclei.sh
src/: __init__.py  main.py  preflight.py
src/agents/: __init__.py  evolution.py  ivy_intel.py  personality.py  randy_recon.py  rita_report.py  victor_vuln.py
src/crew/: __init__.py  agents.py  findings.py  intel_tools.py  llm.py  narration.py  personality_chat.py  report_tools.py  run.py  tools.py  vuln_tools.py
src/discord_bot/: __init__.py  agent_bots.py  bot.py  casual_chat.py  commands.py  conversation_memory.py  embeds.py  (+6 more)
tests/: __init__.py  test_crew_findings.py  test_crew_intel_findings.py  test_crew_intel_tools.py  test_crew_llm.py  test_crew_narration.py  test_crew_personality_chat.py  test_crew_report_findings.py  test_crew_report_tools.py  test_crew_run.py  test_crew_tools.py  test_crew_vuln_findings.py  test_crew_vuln_tools.py
(+13 files in other folders)
